modified those app.py & index.html files to display list of file on the web

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Upload File</title>
-  </head>
-  <body>
+</head>
+<body>
     <h1>Upload new File</h1>
     <form method="post" enctype="multipart/form-data" action="/upload">
-      <input type="file" name="file">
-      <input type="submit" value="Upload">
+        <input type="file" name="file">
+        <input type="submit" value="Upload">
     </form>
-  </body>
+
+    <h2>Uploaded Files:</h2>
+    <ul>
+        {% for file in files %}
+        <li><a href="{{ url_for('uploaded_file', filename=file) }}">{{ file }}</a></li>
+        {% endfor %}
+    </ul>
+</body>
 </html>
