--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,12 @@
     <h2>Uploaded Files:</h2>
     <ul>
         {% for file in files %}
-        <li><a href="{{ url_for('uploaded_file', filename=file) }}">{{ file }}</a></li>
+        <li>
+            <a href="{{ url_for('uploaded_file', filename=file) }}">{{ file }}</a>
+            <form action="{{ url_for('delete_file', filename=file) }}" method="post" style="display: inline;">
+                <button type="submit">Delete</button>
+            </form>
+        </li>
         {% endfor %}
     </ul>
 </body>
